# akidb

./: .dockerignore  .env.example  .gitignore  BUG_ANALYSIS.md  BUG_FIXES_APPLIED.md  BUG_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  FIFTH_BUG_HUNT_REPORT.md  FOURTH_BUG_HUNT_REPORT.md  LICENSE  NEW_BUG_FIXES_REPORT.md  NOTICE  PHASE6_COMPLETION_SUMMARY.md  PR_DESCRIPTION.md  README.md  RELEASE-NOTES-v2.0.0.md  THIRD_BUG_HUNT_REPORT.md  ULTRA_BUG_HUNT_REPORT.md  akidb.db  automatosx.config.json  config.example.toml  docker-compose.observability.yml  docker-compose.yaml  docker-compose.yml
crates/akidb-benchmarks/: Cargo.toml
crates/akidb-benchmarks/benches/: hnsw_library_comparison.rs  index_build.rs  metadata_ops.rs  query_optimizations.rs  simd_distance.rs  vector_search.rs
crates/akidb-benchmarks/examples/: hnsw_comparison.rs
crates/akidb-benchmarks/src/: lib.rs
crates/akidb-core/: Cargo.toml
crates/akidb-core/src/: audit.rs  auth.rs  collection.rs  config.rs  database.rs  error.rs  ids.rs  lib.rs  manifest.rs  metrics.rs  quota.rs  segment.rs  tenant.rs  traits.rs  user.rs  vector.rs
crates/akidb-embedding/: Cargo.toml  README.md
crates/akidb-embedding/python/: convert_qwen_to_onnx.py  embedding_config.example.yaml  onnx_server.py  requirements.txt  test_config.py  test_model_loader.py  test_multi_model.py  test_semantic_similarity.py
crates/akidb-embedding/python/akidb_mlx/: __init__.py  config.py  embedding_service.py  mlx_inference.py  model_loader.py
crates/akidb-embedding/src/: candle.rs  candle.rs.deprecated  lib.rs  mlx.rs  mock.rs  onnx.rs  provider.rs  python_bridge.rs  types.rs
crates/akidb-embedding/tests/: candle_tests.rs  onnx_provider_test.rs
crates/akidb-grpc/: Cargo.toml
crates/akidb-grpc/src/: collection_handler.rs  embedding_handler.rs  lib.rs  main.rs  management_handler.rs
crates/akidb-index/: Cargo.toml
crates/akidb-index/benches/: index_bench.rs
crates/akidb-index/src/: brute_force.rs  diskann.rs  hnsw.rs  instant_hnsw.rs  lib.rs  native.rs  provider.rs  simd.rs  types.rs
crates/akidb-index/tests/: contract_tests.rs  filter_strategies_test.rs  instant_recall_test.rs  loom_concurrency.rs  property_tests.rs  recall_test.rs  stress_tests.rs
crates/akidb-metadata/: Cargo.toml  build.rs
crates/akidb-metadata/migrations/: 001_initial_schema.sql  002_collections_table.sql  003_users_table.sql  004_audit_logs_table.sql  005_vector_documents_table.sql  006_api_keys_table.sql  007_collection_tier_state.sql  008_fix_tier_state_trigger.sql
crates/akidb-metadata/src/: api_key_repository.rs  audit_repository.rs  collection_repository.rs  lib.rs  password.rs  repository.rs  tenant_catalog.rs  tier_state_repository.rs  user_repository.rs  util.rs  vector_persistence.rs
crates/akidb-metadata/tests/: integration_test.rs
crates/akidb-proto/: Cargo.toml  build.rs
crates/akidb-proto/src/: lib.rs
crates/akidb-query/: Cargo.toml
crates/akidb-query/src/: basic_planner.rs  batch_engine.rs  cache.rs  context.rs  distributed.rs  engine.rs  filter_cache.rs  filter_parser.rs  invalidation.rs  lib.rs  materialized_view.rs  plan.rs  planner.rs  profiler.rs  simple_engine.rs
crates/akidb-query/tests/: filter_integration_test.rs
crates/akidb-rest/: Cargo.toml
crates/akidb-rest/src/: lib.rs  main.rs  tracing_init.rs
crates/akidb-rest/src/handlers/: admin.rs  collections.rs  embedding.rs  health.rs  management.rs  mod.rs  tier.rs
crates/akidb-service/: Cargo.toml
crates/akidb-service/src/: collection_service.rs  config.rs  embedding_manager.rs  lib.rs  metrics.rs
crates/akidb-service/tests/: e2e_s3_storage_tests.rs  e2e_storage_tests.rs  integration_tests.rs  observability_test.rs
crates/akidb-storage/: Cargo.toml
crates/akidb-storage/benches/: batch_upload_bench.rs  mock_s3_bench.rs  parallel_upload_bench.rs
crates/akidb-storage/src/: backend.rs  batch_config.rs  batch_uploader.rs  circuit_breaker.rs  compression.rs  dlq.rs  error.rs  lib.rs  memory.rs  metadata.rs  metadata_store.rs  parallel_uploader.rs  parquet_encoder.rs  s3.rs  segment_format.rs  snapshot.rs  storage_backend.rs  tenant_backend.rs  tenant_store.rs  tiering.rs  wal.rs  wal_append_only.rs
crates/akidb-storage/src/object_store/: local.rs  mock.rs  mod.rs  s3.rs
crates/akidb-storage/src/snapshotter/: mod.rs  parquet.rs
crates/akidb-storage/src/tiering_manager/: manager.rs  mod.rs  policy.rs  state.rs  tracker.rs
crates/akidb-storage/src/wal/: file_wal.rs  mod.rs
crates/akidb-storage/tests/: comprehensive_load_test.rs  dlq_tests.rs  e2e_concurrency.rs  e2e_failures.rs  large_scale_load_tests.rs  load_test.rs  parquet_snapshotter_benchmarks.rs  storage_backend_tests.rs  tiering_integration_test.rs
crates/akidb-storage/tests/load_test_framework/: client.rs  metrics.rs  mod.rs  orchestrator.rs  profiles.rs  reporter.rs
services/akidb-api/: Cargo.toml
services/akidb-api/src/: bootstrap.rs  grpc.rs  lib.rs  main.rs  middleware.rs  query_cache.rs  rest.rs  state.rs  telemetry.rs  validation.rs
services/akidb-api/src/handlers/: collections.rs  health.rs  metrics.rs  mod.rs  search.rs  tenants.rs  vectors.rs
services/akidb-api/src/middleware/: auth.rs  metrics.rs  mod.rs  quota.rs  rbac.rs  tenant.rs
services/akidb-api/tests/: batch_search_test.rs  bootstrap_test.rs  e2e_test.rs  filter_pushdown_test.rs  integration_test.rs  multi_batch_simple_test.rs  multi_batch_test.rs  wal_crash_recovery_test.rs
services/akidb-ingest/: Cargo.toml  MULTILANG.md
services/akidb-ingest/examples/: multilang_ingest.rs
services/akidb-ingest/src/: language.rs  main.rs  parsers.rs  pipeline.rs
services/akidb-ingest/src/parsers/: csv_parser.rs  jsonl_parser.rs  parquet_parser.rs
services/akidb-mcp/: Cargo.toml
services/akidb-mcp/src/: balancer.rs  lib.rs  membership.rs  scheduler.rs
services/akidb-pkg/: Cargo.toml
services/akidb-pkg/src/: export.rs  import.rs  main.rs  manifest.rs  verify.rs
services/akidb-replication/: Cargo.toml
services/akidb-replication/src/: config.rs  failover.rs  main.rs  monitor.rs  setup.rs
(+609 files in other folders)
