[workspace]
members = [
    "crates/akidb-core",
    "crates/akidb-storage",
    "crates/akidb-index",
    "crates/akidb-query",
    "crates/akidb-benchmarks",
    "services/akidb-api",
    "services/akidb-mcp",
    "services/akidb-ingest",
    "services/akidb-pkg"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["AkiDB Team"]
license = "Apache-2.0"

[workspace.metadata]
description = "AkiDB distributed vector database"

[workspace.dependencies]
async-trait = "0.1"
arrow = "50.0.0"
axum = { version = "0.7", features = ["macros", "json"] }
bytes = "1.5"
chrono = { version = "=0.4.37", features = ["clock", "serde"] }
config = "0.14"
object_store = { version = "0.10", features = ["aws", "gcp"] }
parking_lot = "0.12"
rayon = "1.8"
roaring = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tonic = { version = "0.11", features = ["transport"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "fs", "signal"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["trace", "request-id", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "fmt", "env-filter"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
moka = { version = "0.12", features = ["future"] }
sha2 = "0.10"
futures = "0.3"

# Phase 3 M4: Production Monitoring
prometheus = "0.13"
once_cell = "1.19"
hyper = "1.0"
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.22"

# Phase 6: Offline Ingest & Package Management
clap = { version = "4.5", features = ["derive", "env"] }
csv = "1.3"
indicatif = "0.17"
tar = "0.4"
zstd = "0.13"
ring = "0.17"
parquet = "50.0.0"
