[workspace]
members = [
    "crates/akidb-core",
    "crates/akidb-metadata",
    "crates/akidb-cli",
    "crates/akidb-embedding",
    "crates/akidb-index",
    "crates/akidb-proto",
    "crates/akidb-service",
    "crates/akidb-storage",
    "crates/akidb-grpc",
    "crates/akidb-rest",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["AkiDB Team"]
license = "Apache-2.0"
repository = "https://github.com/akidb/akidb"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "migrate", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUIDs
uuid = { version = "1.6", features = ["v7", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Observability
prometheus = "0.13"
lazy_static = "1.4"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"
tracing-opentelemetry = "0.22"

# Testing
criterion = "0.5"
