[package]
name = "akidb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# arrow = { workspace = true }  # TODO: Re-enable when implementing SEGv1 format (resolve chrono compatibility)
bytes = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
roaring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Phase 3 M4: Production Monitoring
prometheus = { workspace = true }
once_cell = { workspace = true }

# Phase 7 M1: Multi-Tenancy
rand = { workspace = true }
sha2 = { workspace = true }
