[package]
name = "akidb-embedding"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Synchronization
parking_lot = "0.12"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Python integration
# Using auto-initialize for embedding Python in Rust
# abi3-py310 provides stable ABI compatibility with Python 3.10+ (including 3.13)
pyo3 = { version = "0.22", features = ["auto-initialize", "abi3-py310"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
