[package]
name = "akidb-embedding"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Synchronization
parking_lot = "0.12"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Python integration (optional, gated behind "mlx" feature)
# Bug Fix #5: Made Python dependency optional to improve portability
# This allows the crate to build on machines without Python 3.10+
# Use looser ABI (abi3-py38) for better compatibility
pyo3 = { version = "0.22", features = ["auto-initialize", "abi3-py38"], optional = true }

# Candle ML framework (optional, gated behind "candle" feature)
candle-core = { version = "0.8.0", optional = true, features = ["metal"] }
candle-nn = { version = "0.8.0", optional = true }
candle-transformers = { version = "0.8.0", optional = true }
tokenizers = { version = "0.15.0", optional = true }
hf-hub = { version = "0.3.2", optional = true, default-features = false, features = ["tokio", "online"] }

# ONNX Runtime (optional, gated behind "onnx" feature)
ort = { version = "2.0.0-rc.10", optional = true, features = ["download-binaries"] }
ndarray = { version = "0.15", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = ["mlx"]  # MLX enabled by default
mlx = ["pyo3"]      # MLX embedding provider requires Python/PyO3
candle = [          # Candle embedding provider (pure Rust)
    "candle-core",
    "candle-nn",
    "candle-transformers",
    "tokenizers",
    "hf-hub"
]
onnx = [            # ONNX Runtime provider (universal GPU support)
    "ort",
    "ndarray",
    "tokenizers",
    "hf-hub"
]

[[bench]]
name = "candle_bench"
harness = false
required-features = ["candle"]
