[package]
name = "akidb-grpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "akidb-grpc"
path = "src/main.rs"

[dependencies]
# Internal dependencies
akidb-core = { path = "../akidb-core" }
akidb-proto = { path = "../akidb-proto" }
akidb-service = { path = "../akidb-service" }
akidb-metadata = { path = "../akidb-metadata" }

# Database
sqlx = { workspace = true }

# Async runtime
tokio = { workspace = true }

# gRPC
tonic = "0.11"
prost = "0.12"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
