[package]
name = "akidb-index"
version = "0.1.0"
edition = "2021"

[dependencies]
akidb-core = { path = "../akidb-core" }
akidb-storage = { path = "../akidb-storage" }
anndists = "0.1"
async-trait = { workspace = true }
bincode = "1.3"
hnsw_rs = "0.3"
parking_lot = { workspace = true }
rayon = { workspace = true }
roaring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
