[package]
name = "akidb-metadata"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
akidb-core = { path = "../akidb-core" }
argon2 = "0.5"
async-trait = "0.1"
bincode = "1.3"
chrono = { workspace = true }
rand = "0.8"
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
akidb-core = { path = "../akidb-core" }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
