[package]
name = "akidb-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tonic = "0.11"
prost = "0.12"
serde = { workspace = true }

[build-dependencies]
tonic-build = "0.11"
