[package]
name = "akidb-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "akidb_api"
path = "src/lib.rs"

[dependencies]
akidb-core = { path = "../../crates/akidb-core" }
akidb-index = { path = "../../crates/akidb-index" }
akidb-query = { path = "../../crates/akidb-query" }
akidb-storage = { path = "../../crates/akidb-storage" }
object_store = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
moka = { workspace = true }
sha2 = { workspace = true }
futures = { workspace = true }

# Phase 3 M4: Production Monitoring
prometheus = { workspace = true }
hyper = { workspace = true }

# Security: JWT validation for Bug #51 fix
jsonwebtoken = "9"
subtle = { workspace = true }

# Telemetry and observability
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
