[package]
name = "akidb-mcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "akidb_mcp"
path = "src/lib.rs"

[dependencies]
akidb-core = { path = "../../crates/akidb-core" }
akidb-index = { path = "../../crates/akidb-index" }
akidb-storage = { path = "../../crates/akidb-storage" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
