[package]
name = "akidb-replication"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "akidb-replication"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
